--- a/src/app/auth/views/login/login.component.html
+++ b/src/app/auth/views/login/login.component.html
@@ -1,13 +1,38 @@
-<label for="email">E-mail</label><br>
-<input type="email" id="email" required [(ngModel)]="user.email"><br><br>
-<label for="password">Senha</label><br>
-<input type="email" id="password" required [(ngModel)]="user.password"><br><br>
-<button (click)="login()">Login</button>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+      <form (ngSubmit)="onLogin()" name="loginForm" [formGroup]="loginForm">
+        <div class="email-input">
+          <mat-form-field appearance="outline" class="default-width">
+            <mat-label>E-mail</mat-label>
+            <input matInput formControlName="email" placeholder="email@examplo.com" type="email" required [(ngModel)]="user.email">
+            <mat-error *ngIf="loginForm.get('email')?.errors">
+              E-mail obrigatório
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="default-width">
+            <mat-label>Senha</mat-label>
+            <input formControlName="password" matInput [type]="hide ? 'password' : 'text'" required [(ngModel)]="user.password">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Esconder senha'" [attr.aria-pressed]="hide">
+              <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="loginForm.get('password')?.errors">
+              Senha obrigatória
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <button mat-flat-button type="submit" color="primary">Login</button>
+      </form>
+  </mat-card-content>
+</mat-card>
 
-
-<div *ngIf="user$ | async as user; else loading">
+<!-- <div *ngIf="user$ | async as user; else loading">
   {{ user.access_token }}
 </div>
 <ng-template #loading>
   <span>Realizando login...</span>
-</ng-template>
+</ng-template> -->
