--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,29 @@
+<header>
+  <nav>
+    <div class="mx-2">
+      <img src="assets/logo.webp" alt="">
+    </div>
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" class="nav-link active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Lançamentos</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contas</a>
+        </li>
+      </ul>
+    </div>
+    <div class="mx-2">
+      <mat-icon class="user-account" fontIcon="account_circle"></mat-icon>
+    </div>
+  </nav>
+</header>
 <main class="content-body">
   <router-outlet></router-outlet>
 </main>
